// sensory.api.health
syntax = "proto3";

package sensory.api.health;

option go_package = "gitlab.com/sensory-cloud/server/titan.git/pkg/api/health";
option java_multiple_files = true;
option java_package = "io.sensory.api.health";
option java_outer_classname = "SensoryApiHealthProto";

import "common/common.proto";

// Service for Health function
service HealthService {
  // Obtain an Health and Server status information
  rpc GetHealth (HealthRequest) returns (common.ServerHealthResponse) {}
}

// Request to obtain a Health response
message HealthRequest {}
